--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="application/json; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mrkts.fyi</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <span id="symbol"></span>
-    </div>
-    <div>
-      <span id="name"></span>
-    </div>
-    <div id="price_div">
-      <span>$</span>
-      <span id="current_price"></span>
-    </div>
-    <div id="open_div">
-      <span>Open:</span>
-      <span id="open"></span>
-    </div>
-    <div id="change_div">
-      <span>Change:</span>
-      <span id="percent_change"></span>
+    <div class="stock_info">
+      <div>
+        <span id="symbol"></span>
+      </div>
+      <div>
+        <span id="name"></span>
+      </div>
+      <div id="price_div">
+        <span>$</span>
+        <span id="current_price"></span>
+      </div>
+      <div id="open_div">
+        <span>Open:</span>
+        <span id="open"></span>
+      </div>
+      <div id="change_div">
+        <span>Change:</span>
+        <span id="percent_change"></span>
+      </div>
     </div>
     <script>
       var queryString = window.location.search;
