--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div>
         <span id="name"></span>
       </div>
+      <span>---</span>
       <div id="price_div">
         <span>$</span>
         <span id="current_price"></span>
