--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="search">
-      <input type="text" maxlength="5" id="search" placeholder="AAPL" />
+      <input type="text" maxlength="5" id="search" placeholder="Search" />
       <input type="submit" id="submit" value="&#x1F50E;" onclick="search()" />
     </div>
     <div class="stock_info">
